--- a/src/app/components/auth/signin/signin.component.html
+++ b/src/app/components/auth/signin/signin.component.html
@@ -1,3 +1,11 @@
-<p>
-  signin works!
-</p>
+<h2>Login</h2>
+<form>
+  <div class="form-group">
+    <input type="text" class="form-control" id="usernameInput" aria-describedby="username" placeholder="Username">
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
