--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -1,3 +1,19 @@
-<p>
-  signup works!
-</p>
+<h2>Register</h2>
+<form>
+  <div class="form-group">
+    <input type="text" class="form-control" id="inputUsername" aria-describedby="username" placeholder="Username">
+  </div>
+  <div class="form-group">
+    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <input type="tel" class="form-control" id="inputContact" aria-describedby="contact" placeholder="Contact No">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" id="inputAddress" aria-describedby="address" placeholder="Address">
+  </div>
+  <button type="submit" class="btn btn-success">Add User</button>
+</form>
